--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="mobile-menu" data-menu>
             <div class="container">
                 <ul class="nav__list">
-                    <li class="mobile-menu__item"> <a class="mobile-menu__link line" href="./index.html">Студия</a></li>
+                    <li class="mobile-menu__item"> <a class="mobile-menu__link " href="./index.html">Студия</a></li>
                     <li class="mobile-menu__item"><a class="mobile-menu__link " href="./portfolio.html">Портфолио</a></li>
                     <li class="mobile-menu__item"><a class="mobile-menu__link" href="">Контакты</a></li>
                 </ul>
