--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         </div>
     </footer>
     
-    <!--<div  class="backdrop is-hidden" data-modal>
+    <div  class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="btn-close" data-modal-close>
                 <svg width="18" height="18">
@@ -482,7 +482,7 @@
                  <button class="btn btn-footer" type="submit">Отправить</button>
             </form>
         </div>
-    </div>-->
+    </div>
 
     
     <script src="./js/modal.js"></script>
