--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="mobile-menu" data-menu>
             <div class="container">
-                <ul class="nav__list">
+                <ul class="mobile-menu__list">
                     <li class="mobile-menu__item"> <a class="mobile-menu__link " href="./index.html">Студия</a></li>
                     <li class="mobile-menu__item"><a class="mobile-menu__link " href="./portfolio.html">Портфолио</a></li>
                     <li class="mobile-menu__item"><a class="mobile-menu__link" href="">Контакты</a></li>
@@ -98,7 +98,7 @@
                                 <use href="./images/icons.svg#icon-antenna-1"></use>
                             </svg>
                         </div>
-                        <h3 class="feature__title ">Внимание к деталям</h3>
+                        <h3 class="feature__title title">Внимание к деталям</h3>
                         <p class="features__desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="features__item">
@@ -431,7 +431,7 @@
         <section class="our-clients">
             <div class="container">
                 <h2 class="our-clients__title">Постоянные клиенты</h2>
-                <ul class="our-clients__list " >
+                <ul class="our-clients__list list " >
                     <li class="our-clients_item">
                         <a class="our-clients__link" href="">
                             <svg class="our-clients__icon" width="106" height="60">
