--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         <div class="header__container container">
                 <nav class="nav">
                     <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-                    <ul class="nav__list">
+                    <ul class="nav__list list">
                         <li  class="nav__item"> <a class="nav__link" href="./index.html">Студия</a></li>
                         <li  class="nav__item"><a class="nav__link-studia line" href="./portfolio.html">Портфолио
                          </a></li>
