--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </button>
         </div>
         <div class="mobile-menu" data-menu>
-            
+            <div>
                 <ul class="mobile-menu__list">
                     <li class="mobile-menu__item"> <a class="mobile-menu__link " href="./index.html">Студия</a></li>
                     <li class="mobile-menu__item"><a class="mobile-menu__link " href="./portfolio.html">Портфолио</a></li>
@@ -76,6 +76,7 @@
                         <a class="menu-social__link" href="">Linkedin</a>
                     </li>
                 </ul>
+            </div>
 
             
 
