--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                     <li class="mobile-menu__item"><a class="mobile-menu__link" href="">Контакты</a></li>
                 </ul>
                 <ul class="mobile-auth">
-                    <li class="mobile-auht__item">
+                    <li class="mobile-auth__item">
                         <a class="mobile-auth__tel" href="+38096111111">
         
                             +38 096 111 11 11</a>
